hphp/test/slow/func-ptr-no-interop/bad-func.php.expectf
int(1)
classMeth{
  class(A)
  function(f1)
}
int(3)

Warning: Cannot use a scalar value as an array in %s/bad-func.php on line 15

Fatal error: Function name must be a string in %s/bad-func.php on line 15
